co2monitor (0.0.8) UNRELEASED; urgency=medium

  * new structure: udev -> invoker -> service
  * dbus integration

 -- Yann Büchau <yann.buechau@web.de>  Wed, 16 Nov 2016 10:39:43 +0100

co2monitor (0.0.7) unstable; urgency=medium

  * better internal structure
  * use gettext for i18n and l18n
  * add German translation
  * use Glade and Gtk.Builder for gui creation
  * plug'n'play logging does now also work on non-systemd systems

 -- Yann Büchau <yann.buechau@web.de>  Fri, 04 Nov 2016 14:43:16 +0100

co2monitor (0.0.6) unstable; urgency=medium

  * add own application icon

 -- Yann Büchau <yann.buechau@web.de>  Thu, 03 Nov 2016 21:54:10 +0100

co2monitor (0.0.5) unstable; urgency=medium

  * plotting script is now auto-refreshing
  * added plotting script to application menu

 -- Yann Büchau <yann.buechau@web.de>  Wed, 02 Nov 2016 22:59:15 +0100

co2monitor (0.0.4) unstable; urgency=medium

  * better kill signal management
  * suggest r-base for plotting at installation
  * added example plotting R script to /usr/share/doc/co2monitor/examples

 -- Yann Büchau <yann.buechau@web.de>  Thu, 04 Aug 2016 10:20:36 +0200

co2monitor (0.0.3) unstable; urgency=medium

  * transition to systemd integration
  * co2monitor-service no longer killed by udevd after a while

 -- Yann Büchau <yann.buechau@web.de>  Mon, 01 Aug 2016 20:05:40 +0200

co2monitor (0.0.2) unstable; urgency=medium

  * fixed crash on boot problem
  * implemented warmup time + setting
  * included date in logs

 -- Yann Büchau <yann.buechau@web.de>  Sun, 31 Jul 2016 13:39:53 +0200

co2monitor (0.0.1) unstable; urgency=low

  * Initial release.

 -- Yann Büchau <yann.buechau@web.de>  Tue, 19 Jul 2016 11:13:58 +0200