@@ -1,0 +1,1 @@
+usr/share/doc/co2monitor/*
