@@ -1,3 +1,3 @@
-usr/share/doc/co2monitor/co2monitor-service.1
-usr/share/doc/co2monitor/co2monitor-invoker.1
-usr/share/doc/co2monitor/co2monitor.1
+usr/share/doc/co2monitor/manpages/co2monitor-service.1
+usr/share/doc/co2monitor/manpages/co2monitor-invoker.1
+usr/share/doc/co2monitor/manpages/co2monitor.1
